[tool.poetry]
name = "rbtmql-py"
version = "0.1.0"
description = ""
authors = ["Raphael"]
readme = "README.md"
packages = [{include = "rbtmql_py"}]

[tool.poetry.dependencies]
python = "^3.10"
pika = "^1.3.2"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
